# instagram-django-server

./: pyproject.toml
common/: models.py
config/: settings.py  urls.py
feeds/: admin.py  models.py  serializers.py  urls.py  views.py
feeds/migrations/: 0001_initial.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_rename_caption_review_rcaption.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_rename_followernumber_user_followernum.py
